# Generate-MRI-FastAPI

./: README.md  pyproject.toml
generate_mri_fastapi/: pyproject.toml  requirements.txt  test_s3.ipynb
generate_mri_fastapi/generate_mri_fastapi/: main.py
generate_mri_fastapi/generate_mri_fastapi/config/: config.py  s3_bucket.py
generate_mri_fastapi/generate_mri_fastapi/database/: database.py  dataset.py
generate_mri_fastapi/generate_mri_fastapi/generator/: __init__.py  generator.py
generate_mri_fastapi/generate_mri_fastapi/models/: image.py  stargan.py
generate_mri_fastapi/generate_mri_fastapi/notebooks/: test_mri.ipynb
generate_mri_fastapi/generate_mri_fastapi/routes/: image.py
generate_mri_fastapi/generate_mri_fastapi/schemas/: image.py
generate_mri_fastapi/generate_mri_fastapi/templates/: index.html
generate_mri_fastapi/generate_mri_fastapi/utils/: metrics.py
mri_ui/: package.json
mri_ui/public/: index.html
mri_ui/src/: App.css  App.jsx
mri_ui/src/components/Button/: button.css  index.jsx
mri_ui/src/components/Card/: Card.jsx  CardItem.jsx  card.css
mri_ui/src/components/Input/: index.jsx  styles.sass
mri_ui/src/components/InputFile/: index.jsx  styles.css
mri_ui/src/components/Metrics/: index.js  style.css
mri_ui/src/components/SelectionBox/: index.jsx  style.sass
mri_ui/src/components/Sidebar/: Sidebar.jsx  SidebarItem.jsx  sidebar.css
mri_ui/src/configs/: environment.js
mri_ui/src/pages/: ChooseModel.jsx  InputContrast.jsx  UploadOuterImage.jsx  UploadPage.jsx  style.css
mri_ui/src/routers/: index.js
mri_ui/src/services/: http.js
