[tool.poetry]
name = "generate mri fastapi"
version = "0.1.0"
description = ""
authors = ["hanahh080601 <hanlehngoc080601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nibabel = "5.1.0"
numpy = "1.23.5"
Pillow = "9.5.0"
torch = "2.0.0"
torchio = "0.18.90"
torchvision = "0.15.1"
tqdm = "4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
